<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="1dp"
    tools:context=".LogInMain">


    <ImageView
        android:id="@+id/miniLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cpf_logo" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WELCOME TO PORTAL"
        android:fontFamily="casual" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="25dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="25dp">


            <TextView
                android:id="@+id/textview_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/log_in"
                android:textSize="20sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2sp"
                    android:hint="@string/enter_username"
                    android:textSize="15dp"
                    tools:ignore="TextSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2sp"
                    android:hint="@string/enter_password"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="15dp"
                    tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/school_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2sp"
                    android:hint="@string/enter_school_id"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="15dp"
                    tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />


            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/proceed_teacher_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proceed_as_a_teacher" />

            <Button
                android:id="@+id/proceed_student_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proceed_as_a_students" />

            <TextView
                android:id="@+id/register_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/no_account_yet_click_here_to_register"

                android:textColor="@android:color/holo_blue_dark"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>

