<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="1dp"
    tools:context=".SignUpMain">


    <ImageView
        android:id="@+id/miniLogoS"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cpf_logo" />

    <TextView
        android:id="@+id/welcome_textS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WELCOME TO PORTAL"
        android:fontFamily="casual" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="25dp"
                tools:ignore="ExtraText">

                <TextView
                    android:text="@string/sign_up"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:fontFamily="casual"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2sp"
                        android:hint="@string/enter_lastname"
                        android:textSize="15dp"
                        tools:ignore="TextSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2sp"
                        android:hint="@string/enter_firstname"
                        android:textSize="15dp"
                        tools:ignore="TextSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2sp"
                        android:hint="@string/enter_username1"
                        android:textSize="15dp"
                        tools:ignore="TextSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_school_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2sp"
                        android:hint="@string/enter_school_id"
                        android:textSize="15dp"
                        tools:ignore="TextSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2sp"
                        android:hint="@string/enter_password"
                        android:textColorHint="#757575"
                        android:textSize="15dp"
                        tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2sp"
                        android:hint="@string/confirm_password"
                        android:textSize="15dp"
                        tools:ignore="TextSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/proceed_teacher_btn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/proceed_as_a_teacher" />

                <Button
                    android:id="@+id/proceed_student_btn1"
                    android:text="@string/proceed_as_a_students"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="VisualLintButtonSize" />

                <TextView
                    android:id="@+id/textViewAlreadyHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_have_already_an_account"
                    android:layout_marginTop="9dp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_marginBottom="15dp"
                    android:layout_gravity="center_horizontal"
                    />



            </LinearLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>

</LinearLayout>

