<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="1dp"
    tools:context=".SignUpStudents">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:text="@string/sign_up"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/students_lrn"
                    android:hint="@string/enter_12_digit_lrn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="12"
                    android:layout_marginBottom="10sp"
                    tools:ignore="VisualLintTextFieldSize"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Spinner
                android:id="@+id/spinnerGradeLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/spinner_boarder"
                android:scrollbarSize="20sp"
                android:minHeight="48dp"
                android:entries="@array/grade_levels"
                android:prompt="@string/select_grade_prompt"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_select_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"
                    android:layout_marginBottom="10sp"
                    android:hint="@string/select_your_birthday" />

            </com.google.android.material.textfield.TextInputLayout>


            <Spinner
                android:id="@+id/spinnerSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/spinner_boarder"
                android:minHeight="48dp"
                android:scrollbarSize="20sp"
                android:entries="@array/sex_selection"
                android:prompt="@string/select_sex_prompt"
                tools:ignore="SpeakableTextPresentCheck" />


            <Button
                android:id="@+id/students_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>

